WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11903
REGRESSION: outline not drawn if line style is dashed.
https://bugs.webkit.org/show_bug.cgi?id=11903
Summary
REGRESSION: outline not drawn if line style is dashed.
Hanspeter Schaub
Reported
2006-12-21 03:01:10 PST
I noticed that over the last day or two the outlines are no longer drawn if the line style is "dashed". Solid outlines draw correctly.
Attachments
test case showing dashed outline not drawn.
(337 bytes, text/html)
2006-12-21 03:02 PST
,
Hanspeter Schaub
no flags
Details
Patch
(1.16 KB, patch)
2006-12-21 08:55 PST
,
mitz
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hanspeter Schaub
Comment 1
2006-12-21 03:02:21 PST
Created
attachment 11946
[details]
test case showing dashed outline not drawn.
mitz
Comment 2
2006-12-21 08:32:26 PST
If I change the outline width to 2px or higher it is drawn. Borders are affected in the same way. Those max(strokeThickness, 1.0f) in GraphicsContextCG were doing something after all :-)
mitz
Comment 3
2006-12-21 08:55:51 PST
Created
attachment 11949
[details]
Patch
mitz
Comment 4
2006-12-21 11:26:06 PST
***
Bug 11918
has been marked as a duplicate of this bug. ***
Beth Dakin
Comment 5
2006-12-22 11:33:04 PST
Comment on
attachment 11949
[details]
Patch r=me
Alexey Proskuryakov
Comment 6
2006-12-22 11:41:48 PST
Committed revision 18392.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug