2006-12-22  Mitz Pettel  <mitz@webkit.org>

Reviewed by Beth.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11903
          REGRESSION: outline not drawn if line style is dashed.

        This fixes a bunch of existing pixel tests.

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::drawBorder):



Canonical link: https://commits.webkit.org/15441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18392 268f45cc-cd09-0410-ab3c-d52691b4dbfc