WebCore/rendering/RenderObject.cpp
@@ -966,7 +966,7 @@ void RenderObject::drawBorder(GraphicsContext* graphicsContext, int x1, int y1, 
         case DOTTED:
         case DASHED:
             graphicsContext->setStrokeColor(c);
-            graphicsContext->setStrokeThickness(width == 1 ? 0 : width);
+            graphicsContext->setStrokeThickness(width);
             graphicsContext->setStrokeStyle(style == DASHED ? DashedStroke : DottedStroke);
 
             if (width > 0)
